app/javascript/styles/foresdon/diff.scss
html {
  scrollbar-color: $ui-base-color transparent;
}

body, body.admin {
  background: url($foresdon-background-image) no-repeat fixed bottom center;


  @media screen and (max-width: calc($no-gap-breakpoint - 1px)) {
    background-position: 25% 80%;
  }

  @media screen and (max-width: calc($no-gap-breakpoint - 285px - 1px)) {
    background-position: 38% 80%;
  }
}

.ui__header {
  background-color: $ui-base-color-darken;

  @media screen and (max-width: calc($no-gap-breakpoint - 1px)) {
    background-color: darken(rgba($classic-base-color, 0.96), 6%);
    border-bottom: 0;
  }
}


/* advanced web interface */
.drawer {
  &__header {
    background-color: transparent;

    a {
      background-color: $ui-column-header-color;
      transition: background 100ms ease-in;
  
      &:hover {
        background: lighten($ui-base-color, 3%);
        transition: background 200ms ease-out;
      }
    }
  }

  &__inner {
    border-radius: 4px 4px 0 0;
  }

  &__tab {
    &:first-child {
      border-radius: 4px 0 0 4px;
    }

    &:last-child {
      border-radius: 0 4px 4px 0;
    }
  }

  &__inner {
    background-color: $ui-base-color;
  
    &__mastodon {
      background-color: transparent;
    }
  }
}

.compose-form {
  .compose-form__warning {
    color: $classic-base-color;
  }
  .reply-indicator {
    color: $classic-base-color;

    &__display-name,
    &__content {
      color: $classic-base-color;
    }
  }

  .spoiler-input__input,
  .autosuggest-textarea__textarea,
  .fixed-input__input {
    color: $classic-base-color;
  }

  &__poll-wrapper {
    .button.button-secondary,
    input[type="text"],
    select {
      color: $classic-base-color;
    }
  }

  .autosuggest-textarea__suggestions {
    color: $classic-base-color;
  }
}

.emoji-mart {
  color: $classic-base-color;
}

.emoji-mart-search input {
  color: $classic-base-color;
}

.language-dropdown__dropdown__results__item {
    color: $classic-base-color;
}

.search-results {
  background-color: $ui-base-color;

  &__section h5 {
    background-color: $ui-base-color-overwrap;
  }
}

.column-header {
  background-color: $ui-column-header-color;

  &__button,
  &__back-button {
    background-color: transparent;
  }
}

.notification__filter-bar,
.account__section-headline {
  background-color: transparent;
  border: none;

  & a, button {
    flex: 2 1 auto;
    padding: 15px 5px;
    background-color: $ui-base-color-overwrap;

    &.active {
      background-color: $ui-base-color;
  
      &::before,
      &::after {
        font-size: 8px;
        width: 8px;
        height: auto;
        left: calc(50% - 4px);
        transform: none;
        color: $classic-highlight-color;
        content: "●";
        transform: none;
        border: none;
      }
  
      &::after {
        bottom: 0px;
        border: none;
      }
    }
  }
}

.notification__filter-bar {
  & a, button {
    &.active {
      background-color: $ui-base-color;
    }
  }
}

.account__section-headline {
  & a, button {
    &.active {
      background-color: transparent;
    }
  }
}

div[aria-label="Explore"] > .scrollable {
  background-color: transparent;

  .empty-column-indicator {
    background-color: $ui-base-color;
  }

  .explore__suggestions {
    background-color: $ui-base-color;

    .empty-column-indicator {
      background-color: transparent;
    }
  }

  .account__section-headline {
    & a, button {
      background-color: $ui-base-color-overwrap;
  
      &.active {
        background-color: $ui-base-color;
      }
  
    }
  }
}

.getting-started {
  background-color: transparent;

  &__wrapper {
    background-color: transparent;
  }

  .column-subheading {
    background-color: $ui-base-color-overwrap;
  }

  .column-link {
    background-color: transparent;

    &:hover,
    &:focus,
    &:active {
      background-color: $ui-base-color-overwrap;
    }
  }
}

.column-back-button {
  background-color: $ui-column-header-color;
}

.account-timeline__header {
  .account__header {
    background-color: transparent;
  }

  .account__header__fields {
    background-color: $ui-base-color-overwrap;
  }
}

.column-inline-form {
  & label {
    & input {
      color: $classic-base-color;
    }
  }
}

.empty-column-indicator,
.follow_requests-unlocked_explanation {
  background-color: transparent;
}

.dropdown-menu {
  background-color: $ui-base-color-darken;

  &__item {
    color: $classic-primary-color;

    a,
    button {
      background-color: transparent;

      &:focus,
      &:hover,
      &:active {
        color: $classic-secondary-color;
        background-color: $ui-base-color-overwrap;
      }
    }
  }
}

.scrollable .account-card {
  background-color: $ui-base-color-overwrap;

  &__permalink {
    background-color: transparent;
  }

  &__header {
    background-color: transparent;
  }

  &__bio::after {
    background: none;
  }
}

/* single column web interface */
.columns-area__panels__pane__inner {
  background-color: $ui-base-color;

  @media screen and (max-width: calc($no-gap-breakpoint - 1px)) {
    background-color: transparent;
  }
}

.tabs-bar__wrapper {
  padding-top: 0;
}

.compose-panel,
.navigation-panel {
  margin-top: 0;
}

.columns-area__panels__pane--navigational {
  .navigation-panel {
    @media screen and (max-width: calc($no-gap-breakpoint - 1px)) {
      background-color: $ui-header-color;
      border-left: 0;
    }
  }
}

.explore__search-results {
  background-color: $ui-base-color;
}

div[aria-label="Explore"] {
  .explore__search-results {
    .empty-column-indicator {
      background-color: transparent;
    }
  }
}

/* modals */
.modal-root__modal {
  background-color: $ui-base-color;
}

.boost-modal,
.confirmation-modal,
.report-modal,
.actions-modal,
.mute-modal,
.block-modal,
.compare-history-modal {
  background: $ui-base-color-darken;
}

.boost-modal,
.confirmation-modal,
.mute-modal,
.block-modal {
  &__action-bar {
    background-color: $ui-base-color-overwrap;
  }
}

.embed-modal {
  .embed-modal__container {
    .embed-modal__html {
      border: solid 1px $inverted-text-color;
    }
  }
}

.list-editor {
  background-color: transparent;

  &__search {
    background-color: $ui-base-color-overwrap;

    .search_input {
      color: $classic-base-color;
    }
  }

  .drawer__backdrop {
    background-color: transparent;
  }

  .backdrop {
    background-color: $ui-base-color;
  }
}

.report-dialog-modal {
  .emoji-mart-search {
    border-radius: 4px 4px 0 0;

    input {
      background-color: $white;
    }
  }

  .emoji-mart-scroll {
    padding: 0 10px 10px;
    border-radius: 0 0 4px 4px;
  }
}

.setting-text {
  color: $classic-base-color;
}

/* preferences */
.admin-wrapper {
  .sidebar {
    ul a {
      background-color: $ui-base-color-overwrap;

      & .selected .simple-navigation-active-leaf {
        background-color: $ui-highlight-color-transparent;
      }
    }
  }
}

.batch-table {
  &__toolbar {
    background-color: $ui-base-color-darken;
  }

  &__row {
    background-color: $ui-base-color;
  }
}

.table {
  &.inline-table {
    & > thead > tr {
      & > td,
      & > th {
        background-color: $ui-base-color-darken;
      }
    }

    & > tbody > tr {
      background-color: $ui-base-color-overwrap;

      &:nth-child(odd) {
        background-color: $ui-base-color;
      }
    }
  }
}

